# indoorlocalization_backend

./: .example.env  .example.env.app  .example.env.db  .gitignore  README.md  alembic.ini  main.py  nixpacks.toml  pyproject.toml  railway.json  run.py  start.sh
.github/workflows/: generate_example_env_files.yml  run_tests.yml
app/: __init__.py  config.py  main.py  settings.py
app/api/: __init__.py  dependancies.py  dependencies.py
app/common/: types.py
app/database/: db.py  dependencies.py  settings.py
app/functions/: alembic_jobs.py  cache.py  exceptions.py  jwt.py  jwt_functions.py  logger.py  middleware.py  mqtt_client.py  mqtt_handlers.py  multicast_dns.py  schemes.py
app/models/: __init__.py  asset.py  common.py  floor_map.py  history.py  user.py  zone.py  zone_point.py
app/resources/: db.py
cicd/: generate_env_example.py  prepare_env.py
migrations/: env.py
migrations/versions/: 059387b83437_.py  10e50ce7ceee_add_first_user_seeding_in_database.py  21dc04570d2d_.py  2e5e21568e1d_.py  4aef297192a4_.py  5f28db645842_.py  65af5b6dcfe5_.py  739018d16c4e_.py  7b694012ac68_.py  83d27a7c4977_.py  89da1d5005f7_.py  8d795357a292_.py  92deb4e81060_.py  97e23857f048_.py  9d5e86499055_.py  9fe38fc83054_.py  c5b8237178f2_.py  eabaed5158f0_.py  ee3cf4ba67c5_.py
tests/: __init__.py
tests/manual/: test_zeroconf.py
tests/unit/: conftest.py  test_asset_position_service.py  test_asset_service.py  test_auth_api.py  test_db_engine_handler.py  test_floormap_service.py  test_multicast_dns.py  test_token.py  test_user_service.py  test_zone_position_service.py  (+2 more)
(+39 files in other folders)
