[tool.poetry]
name = "indoorlocalization-backend"
version = "0.1.0"
description = "Back-end server for the indoorlocalization project."
authors = ["kjacmenja21 <karlojacmenjak@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.27.2"
alembic = "^1.14.0"
pytest = "^8.3.3"
fastapi = "^0.115.4"
fastapi-mqtt = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
