[tool.poetry]
name = "indoorlocalization-backend"
version = "0.1.0"
description = "Back-end server for the indoorlocalization project."
authors = ["kjacmenja21 <karlojacmenjak@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.27.2"
alembic = "^1.14.0"
pytest = "^8.3.3"
fastapi = "^0.115.4"
fastapi-mqtt = "^2.2.0"
pydantic-settings = "^2.6.1"
asyncpg = "^0.30.0"
psycopg2 = "^2.9.10"
zeroconf = "^0.136.2"
hypercorn = "^0.17.3"
python-multipart = "^0.0.19"
bcrypt = "^4.2.1"
pydantic = {extras = ["email"], version = "^2.10.3"}
shapely = "^2.0.6"
pillow = "^11.1.0"
pytest-cov = "^6.0.0"
pytest-asyncio = "^0.25.2"
pytest-html = "^4.1.1"
python-dotenv = "^1.0.1"
websockets = "^14.1"
pyjwt = "^2.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
